@@ -81,7 +81,7 @@ static int typeAlign[16] =  {
 #define hdrchkType(_type) ((_type) < RPM_MIN_TYPE || (_type) > RPM_MAX_TYPE)
 
 /**
- * Sanity check on data size and/or offset.
+ * Sanity check on data size and/or offset and/or count.
  * This check imposes a limit of 16 MB, more than enough.
  */
 #define hdrchkData(_nbytes) ((_nbytes) & 0xff000000)
@@ -344,7 +344,7 @@ rpmRC headerCheck(rpmts ts, const void * uh, size_t uc, const char ** msg)
     int blen;
     size_t nb;
     int_32 ril = 0;
-    unsigned char * end = NULL;
+    unsigned char * regionEnd = NULL;
     rpmRC rc = RPMRC_FAIL;	/* assume failure */
     int xx;
     int i;
@@ -353,15 +353,17 @@ rpmRC headerCheck(rpmts ts, const void * uh, size_t uc, const char ** msg)
 
     /* Is the blob the right size? */
     if (uc > 0 && pvlen != uc) {
-	sprintf(buf, _("blob size(%d): BAD, 8 + 16 * il(%d) + dl(%d)\n"),
-			uc, il, dl);
+	snprintf(buf, sizeof(buf),
+		_("blob size(%d): BAD, 8 + 16 * il(%d) + dl(%d)\n"),
+		uc, il, dl);
 	goto exit;
     }
 
     /* Check (and convert) the 1st tag element. */
     xx = headerVerifyInfo(1, dl, pe, &entry->info, 0);
     if (xx != -1) {
-	sprintf(buf, _("tag[%d]: BAD, tag %d type %d offset %d count %d\n"),
+	snprintf(buf, sizeof(buf),
+		_("tag[%d]: BAD, tag %d type %d offset %d count %d\n"),
 		0, entry->info.tag, entry->info.type,
 		entry->info.offset, entry->info.count);
 	goto exit;
@@ -378,12 +380,21 @@ rpmRC headerCheck(rpmts ts, const void * uh, size_t uc, const char ** msg)
     }
 /*@=sizeoftype@*/
 
+    /* Is the offset within the data area? */
+    if (entry->info.offset >= dl) {
+	snprintf(buf, sizeof(buf),
+		_("region offset: BAD, tag %d type %d offset %d count %d\n"),
+		entry->info.tag, entry->info.type,
+		entry->info.offset, entry->info.count);
+	goto exit;
+    }
+
     /* Is there an immutable header region tag trailer? */
-    end = dataStart + entry->info.offset;
+    regionEnd = dataStart + entry->info.offset;
 /*@-bounds@*/
-    (void) memcpy(info, end, entry->info.count);
+    (void) memcpy(info, regionEnd, REGION_TAG_COUNT);
 /*@=bounds@*/
-    end += entry->info.count;
+    regionEnd += REGION_TAG_COUNT;
 
 /*@-sizeoftype@*/
     xx = headerVerifyInfo(1, dl, info, &entry->info, 1);
@@ -392,7 +403,7 @@ rpmRC headerCheck(rpmts ts, const void * uh, size_t uc, const char ** msg)
        && entry->info.type == RPM_BIN_TYPE
        && entry->info.count == REGION_TAG_COUNT))
     {
-	sprintf(buf,
+	snprintf(buf, sizeof(buf),
 		_("region trailer: BAD, tag %d type %d offset %d count %d\n"),
 		entry->info.tag, entry->info.type,
 		entry->info.offset, entry->info.count);
@@ -405,8 +416,9 @@ rpmRC headerCheck(rpmts ts, const void * uh, size_t uc, const char ** msg)
 
     /* Is the no. of tags in the region less than the total no. of tags? */
     ril = entry->info.offset/sizeof(*pe);
-    if (ril > il) {
-	sprintf(buf, _("region size: BAD, ril(%d) > il(%d)\n"), ril, il);
+    if ((entry->info.offset % sizeof(*pe)) || ril > il) {
+	snprintf(buf, sizeof(buf),
+		_("region size: BAD, ril(%d) > il(%d)\n"), ril, il);
 	goto exit;
     }
 
@@ -414,7 +426,8 @@ rpmRC headerCheck(rpmts ts, const void * uh, size_t uc, const char ** msg)
     for (i = ril; i < il; i++) {
 	xx = headerVerifyInfo(1, dl, pe+i, &entry->info, 0);
 	if (xx != -1) {
-	    sprintf(buf, _("tag[%d]: BAD, tag %d type %d offset %d count %d\n"),
+	    snprintf(buf, sizeof(buf),
+		_("tag[%d]: BAD, tag %d type %d offset %d count %d\n"),
 		i, entry->info.tag, entry->info.type,
 		entry->info.offset, entry->info.count);
 	    goto exit;
@@ -432,7 +445,10 @@ rpmRC headerCheck(rpmts ts, const void * uh, size_t uc, const char ** msg)
 		blen++;
 	    }
 	    if (entry->info.type != RPM_STRING_TYPE || *b != '\0' || blen != 40)
+	    {
+		snprintf(buf, sizeof(buf), _("hdr SHA1: BAD, not hex\n"));
 		goto exit;
+	    }
 /*@=boundsread@*/
 	    if (info->tag == 0) {
 /*@-boundswrite@*/
@@ -447,8 +463,10 @@ rpmRC headerCheck(rpmts ts, const void * uh, size_t uc, const char ** msg)
 	case RPMTAG_DSAHEADER:
 	    if (vsflags & RPMVSF_NODSAHEADER)
 		/*@switchbreak@*/ break;
-	    if (entry->info.type != RPM_BIN_TYPE)
+	    if (entry->info.type != RPM_BIN_TYPE) {
+		snprintf(buf, sizeof(buf), _("hdr DSA: BAD, not binary\n"));
 		goto exit;
+	    }
 /*@-boundswrite@*/
 	    *info = entry->info;	/* structure assignment */
 /*@=boundswrite@*/
@@ -463,6 +481,7 @@ rpmRC headerCheck(rpmts ts, const void * uh, size_t uc, const char ** msg)
 exit:
     /* Return determined RPMRC_OK/RPMRC_FAIL conditions. */
     if (rc != RPMRC_NOTFOUND) {
+	buf[sizeof(buf)-1] = '\0';
 	if (msg) *msg = xstrdup(buf);
 	return rc;
     }
@@ -472,14 +491,16 @@ exit:
 verifyinfo_exit:
 	xx = headerVerifyInfo(ril-1, dl, pe+1, &entry->info, 0);
 	if (xx != -1) {
-	    sprintf(buf, _("tag[%d]: BAD, tag %d type %d offset %d count %d\n"),
+	    snprintf(buf, sizeof(buf),
+		_("tag[%d]: BAD, tag %d type %d offset %d count %d\n"),
 		xx+1, entry->info.tag, entry->info.type,
 		entry->info.offset, entry->info.count);
 	    rc = RPMRC_FAIL;
 	} else {
-	    sprintf(buf, "Header sanity check: OK\n");
+	    snprintf(buf, sizeof(buf), "Header sanity check: OK\n");
 	    rc = RPMRC_OK;
 	}
+	buf[sizeof(buf)-1] = '\0';
 	if (msg) *msg = xstrdup(buf);
 	return rc;
     }
@@ -510,7 +531,7 @@ verifyinfo_exit:
 	}
 
 	ildl[0] = htonl(ril);
-	ildl[1] = (end - dataStart);
+	ildl[1] = (regionEnd - dataStart);
 	ildl[1] = htonl(ildl[1]);
 
 	dig->hdrmd5ctx = rpmDigestInit(PGPHASHALGO_MD5, RPMDIGEST_NONE);
@@ -552,7 +573,7 @@ verifyinfo_exit:
     case RPMTAG_SHA1HEADER:
 /*@-boundswrite@*/
 	ildl[0] = htonl(ril);
-	ildl[1] = (end - dataStart);
+	ildl[1] = (regionEnd - dataStart);
 	ildl[1] = htonl(ildl[1]);
 /*@=boundswrite@*/
 
@@ -589,8 +610,8 @@ verifyinfo_exit:
     rc = rpmVerifySignature(ts, buf);
 
 /*@-boundswrite@*/
-    if (msg != NULL)
-	*msg = xstrdup(buf);
+    buf[sizeof(buf)-1] = '\0';
+    if (msg) *msg = xstrdup(buf);
 /*@=boundswrite@*/
 
     rpmtsCleanDig(ts);
@@ -599,6 +620,7 @@ verifyinfo_exit:
 
 rpmRC rpmReadHeader(rpmts ts, FD_t fd, Header *hdrp, const char ** msg)
 {
+    char buf[BUFSIZ];
     int_32 block[4];
     int_32 il;
     int_32 dl;
@@ -607,28 +629,48 @@ rpmRC rpmReadHeader(rpmts ts, FD_t fd, Header *hdrp, const char ** msg)
     int_32 nb;
     Header h = NULL;
     rpmRC rc = RPMRC_FAIL;		/* assume failure */
+    int xx;
+
+    buf[0] = '\0';
 
     if (hdrp)
 	*hdrp = NULL;
+    if (msg)
+	*msg = NULL;
 
-    if (timedRead(fd, (char *)block, sizeof(block)) != sizeof(block))
+    if ((xx = timedRead(fd, (char *)block, sizeof(block))) != sizeof(block)) {
+	snprintf(buf, sizeof(buf),
+		_("hdr size(%d): BAD, read returned %d\n"), sizeof(block), xx);
 	goto exit;
-    if (memcmp(block, header_magic, sizeof(header_magic)))
+    }
+    if (memcmp(block, header_magic, sizeof(header_magic))) {
+	snprintf(buf, sizeof(buf), _("hdr magic: BAD\n"));
 	goto exit;
+    }
     il = ntohl(block[2]);
-    if (hdrchkTags(il))
+    if (hdrchkTags(il)) {
+	snprintf(buf, sizeof(buf),
+		_("hdr tags: BAD, no. of tags(%d) out of range\n"), il);
+
 	goto exit;
+    }
     dl = ntohl(block[3]);
-    if (hdrchkData(dl))
+    if (hdrchkData(dl)) {
+	snprintf(buf, sizeof(buf),
+		_("hdr data: BAD, no. of bytes(%d) out of range\n"), dl);
 	goto exit;
+    }
 
     nb = (il * sizeof(struct entryInfo_s)) + dl;
     uc = sizeof(il) + sizeof(dl) + nb;
     ei = xmalloc(uc);
     ei[0] = block[2];
     ei[1] = block[3];
-    if (timedRead(fd, (char *)&ei[2], nb) != nb)
+    if ((xx = timedRead(fd, (char *)&ei[2], nb)) != nb) {
+	snprintf(buf, sizeof(buf),
+		_("hdr blob(%d): BAD, read returned %d\n"), nb, xx);
 	goto exit;
+    }
 
     /* Sanity check header tags */
     rc = headerCheck(ts, ei, uc, msg);
@@ -637,8 +679,10 @@ rpmRC rpmReadHeader(rpmts ts, FD_t fd, Header *hdrp, const char ** msg)
 
     /* OK, blob looks sane, load the header. */
     h = headerLoad(ei);
-    if (h == NULL)
+    if (h == NULL) {
+	snprintf(buf, sizeof(buf), _("hdr load: BAD\n"));
         goto exit;
+    }
     h->flags |= HEADERFLAG_ALLOCATED;
     ei = NULL;	/* XXX will be freed with header */
     
@@ -647,6 +691,14 @@ exit:
 	*hdrp = headerLink(h);
     ei = _free(ei);
     h = headerFree(h);
+
+/*@-boundswrite@*/
+    if (msg != NULL && *msg == NULL && buf[0] != '\0') {
+	buf[sizeof(buf)-1] = '\0';
+	*msg = xstrdup(buf);
+    }
+/*@=boundswrite@*/
+
     return rc;
 }
 
@@ -705,10 +757,13 @@ int rpmReadPackageFile(rpmts ts, FD_t fd, const char * fn, Header * hdrp)
     }
 
     /* Read the signature header. */
-    rc = rpmReadSignature(fd, &sigh, l->signature_type);
+    msg = NULL;
+    rc = rpmReadSignature(fd, &sigh, l->signature_type, &msg);
     switch (rc) {
     default:
-	rpmError(RPMERR_SIGGEN, _("%s: rpmReadSignature failed\n"), fn);
+	rpmError(RPMERR_SIGGEN, _("%s: rpmReadSignature failed: %s"), fn,
+		(msg && *msg ? msg : "\n"));
+	msg = _free(msg);
 	goto exit;
 	/*@notreached@*/ break;
     case RPMRC_OK:
@@ -719,6 +774,7 @@ int rpmReadPackageFile(rpmts ts, FD_t fd, const char * fn, Header * hdrp)
 	}
 	break;
     }
+    msg = _free(msg);
 
 #define	_chk(_mask)	(sigtag == 0 && !(vsflags & (_mask)))
 
